--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
         "import/no-extraneous-dependencies": [0],
         "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
         "react/jsx-indent-props": [2, 4],
+        "react/jsx-indent": ["error", 4],
         "react/prop-types": [0],
         "object-curly-newline": [0],
         "react/no-unescaped-entities": [0]
