--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
         "prettier": "^2.4.1"
     },
     "dependencies": {
+        "d3": "^7.1.1",
+        "force-graph": "^1.42.4",
         "gatsby": "^3.14.2",
+        "normalize.css": "^8.0.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-force-graph": "^1.41.7"
     }
 }
